<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">On Your Bike</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="settings_button">Settings</string>
    <string name="vibrate_checkbox">Vibrate</string>
    <string name="vibrate_on">Timer when running will vibrate every 5 minutes, 15 minutes and on the hour.</string>
    <string name="vibrate_off">Timer will not vibrate.</string>
    <string name="awake_checkbox">Stay Awake</string>
    <string name="awake_on">The screen will stay on while the timer is running.</string>
    <string name="awake_off">The screen may dim or turn off while the timer is running.</string>
    <string name="time_title">On Your Bike</string>
    <string name="time_running_ticker">Keep going!</string>
    <string name="time_running_message">You have been riding for %1$02d:%2$02d. Keep it up!</string>
    <string name="time_start_ticker">On your way!</string>
    <string name="time_start_message">You have just started.</string>
    <string name="back_button">Back</string>
    <string name="title_activity_routes">Routes</string>
    <string name="menu_routes">Routes</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_map">Map</string>
    <string name="gps_title">GPS is Turned Off</string>
    <string name="gps_settings">Do you want to turn on GPS in the location settings?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_trips">Trips</string>
    <string name="title_activity_photo">Photos</string>
    <string name="photo_button">Take Photo</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_share">Share</string>
    <string name="share_title">Share with?</string>

    <dimen name="timer_text_size">60sp</dimen>
    <dimen name="button_text_size">18sp</dimen>

</resources>